Added admin toolbar and byline fields. Change site name

--- a/config/sync/system.site.yml
+++ b/config/sync/system.site.yml
@@ -1,5 +1,5 @@
 uuid: 4fddfa8d-226b-483f-a433-c7fca7852180
-name: 'Composer Demo'
+name: 'Super Joseph Project'
 mail: composer@joseph.com
 slogan: ''
 page:
