--- a/config/sync/node.type.article.yml
+++ b/config/sync/node.type.article.yml
@@ -1,7 +1,14 @@
 uuid: 85f9101a-8dfd-425d-9f37-a09ec74b82a7
 langcode: en
 status: true
-dependencies: {  }
+dependencies:
+  module:
+    - menu_ui
+third_party_settings:
+  menu_ui:
+    available_menus:
+      - main
+    parent: 'main:'
 _core:
   default_config_hash: AeW1SEDgb1OTQACAWGhzvMknMYAJlcZu0jljfeU3oso
 name: Article
@@ -10,4 +17,4 @@ description: 'Use <em>articles</em> for time-sensitive content like news, press 
 help: ''
 new_revision: true
 preview_mode: 1
-display_submitted: true
+display_submitted: false
