--- a/composer.json
+++ b/composer.json
@@ -32,6 +32,7 @@
         "zaporylie/composer-drupal-optimizations": "^1.0"
     },
     "require-dev": {
+        "deployer/deployer": "^6.8",
         "drupal/core-dev": "^8.8.0"
     },
     "conflict": {
